[package]
name = "scheme"
version = "0.1.0"
authors = ["Itai Bar-Natan <itaibn3141@gmail.com>"]
edition = "2018"

[dependencies]
either = "1.5.0"
gc = {version = "0.3.6", features = ["derive"]}
lazy_static = "1.0.0"
maplit = "1.0.1"
nom = {version = "6.0.1", features = ["regexp"]}
#nom = "6.0.1"
num = "0.3.1"
regex = "0.2"
